--- a/src/GrpcStreamBenchmark.Consumer/Properties/launchSettings.json
+++ b/src/GrpcStreamBenchmark.Consumer/Properties/launchSettings.json
@@ -4,16 +4,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": false,
-      "applicationUrl": "http://localhost:5063",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
-    },
-    "https": {
-      "commandName": "Project",
-      "dotnetRunMessages": true,
-      "launchBrowser": false,
-      "applicationUrl": "https://localhost:7253;http://localhost:5063",
+      "applicationUrl": "http://+:5001",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
