--- a/src/GrpcStreamBenchmark.Consumer/appsettings.json
+++ b/src/GrpcStreamBenchmark.Consumer/appsettings.json
@@ -4,5 +4,6 @@
       "Default": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ProducerUrl": "http://localhost:7126"
 }
