--- a/deploy/configure/inventory/group_vars/all.yml
+++ b/deploy/configure/inventory/group_vars/all.yml
@@ -2,3 +2,7 @@
 ansible_connection: ssh
 ansible_user: ubuntu
 ansible_become: true
+
+docker_auth:
+- username: "{{ docker_user }}"
+  password: "{{ docker_pass }}"
