--- a/.drone.yml
+++ b/.drone.yml
@@ -2,34 +2,45 @@ kind: pipeline
 type: docker
 name: default
 
-platform:
-  os: linux
-  arch: amd64
-
 volumes:
 - name: dist
   temp: {}
-
-environment:
-  CONSUMER_APP_ARCHIVE: /dist/consumer.tgz
-  CONSUMER_APP_EXEC: GrpcStreamBenchmark.Consumer
-  CONSUMER_APP_PORT: 5001
-  PRODUCER_APP_ARCHIVE: /dist/producer.tgz
-  PRODUCER_APP_EXEC: GrpcStreamBenchmark.Producer
-  PRODUCER_APP_PORT: 5002
+- name: docker
+  host:
+    path: /var/run/docker.sock
 
 steps:
 - name: build
-  image: mcr.microsoft.com/dotnet/sdk:7.0
+  image: docker:dind
   volumes:
+  - name: docker
+    path: /var/run/docker.sock
   - name: dist
     path: /dist
+  environment:
+    DOCKER_USER:
+      from_secret: DOCKER_USER
+    DOCKER_PASS:
+      from_secret: DOCKER_PASS
   commands:
   - |
-    dotnet build src/GrpcStreamBenchmark.Consumer/GrpcStreamBenchmark.Consumer.csproj -o /dist/consumer -c Release --runtime linux-x64 --self-contained
-    dotnet build src/GrpcStreamBenchmark.Producer/GrpcStreamBenchmark.Producer.csproj -o /dist/producer -c Release --runtime linux-x64 --self-contained
-    tar -czf $CONSUMER_APP_ARCHIVE -C /dist/consumer .
-    tar -czf $PRODUCER_APP_ARCHIVE -C /dist/producer .
+    echo $(date +'%Y%m%d%H%M%S') > /dist/image_tag
+    export IMAGE_TAG=$(cat /dist/image_tag)
+
+    docker build --build-arg PROJECT_NAME=GrpcStreamBenchmark.Consumer \
+      -t wurdum/grpc-stream-bench-consumer:$IMAGE_TAG \
+      -t wurdum/grpc-stream-bench-consumer:latest \
+      .
+    docker build --build-arg PROJECT_NAME=GrpcStreamBenchmark.Producer \
+      -t wurdum/grpc-stream-bench-producer:$IMAGE_TAG \
+      -t wurdum/grpc-stream-bench-producer:latest \
+      .
+
+    echo $DOCKER_PASS | docker login -u $DOCKER_USER --password-stdin
+    docker push wurdum/grpc-stream-bench-consumer:$IMAGE_TAG
+    docker push wurdum/grpc-stream-bench-producer:$IMAGE_TAG
+    docker push wurdum/grpc-stream-bench-consumer:latest
+    docker push wurdum/grpc-stream-bench-producer:latest
 
 - name: provision
   image: hashicorp/terraform:1.3.7
@@ -59,8 +70,14 @@ steps:
       from_secret: AWS_SSH_KEY
     AWS_BASTION_HOST:
       from_secret: AWS_BASTION_HOST
+    DOCKER_USER:
+      from_secret: DOCKER_USER
+    DOCKER_PASS:
+      from_secret: DOCKER_PASS
   commands:
   - |
+    export IMAGE_TAG=$(cat /dist/image_tag)
+
     cd deploy/configure
 
     echo "Setting up SSH keys and config..."
@@ -71,8 +88,7 @@ steps:
     chmod 600 ~/.ssh/id_rsa
 
     echo "Running Ansible..."
-    ansible-playbook site.yml -D --extra-vars "app_group=consumer app_archive=$CONSUMER_APP_ARCHIVE"
-    ansible-playbook site.yml -D --extra-vars "app_group=producer app_archive=$PRODUCER_APP_ARCHIVE"
+    ansible-playbook site.yml -D -e "image_tag=$IMAGE_TAG docker_user=$DOCKER_USER docker_pass=$DOCKER_PASS"
   depends_on:
   - build
   - provision
