--- a/deploy/configure/roles/docker-containers/tasks/main.yml
+++ b/deploy/configure/roles/docker-containers/tasks/main.yml
@@ -4,6 +4,7 @@
     path: "{{ docker_configs_path }}"
     state: directory
     mode: "0755"
+  when: docker_configs_path | length > 0
 
 - name: Create configs file
   copy:
