--- a/deploy/configure/inventory/group_vars/all.yml
+++ b/deploy/configure/inventory/group_vars/all.yml
@@ -3,6 +3,8 @@ ansible_connection: ssh
 ansible_user: ubuntu
 ansible_become: true
 
+docker_configs_path: /etc/docker/configs
+
 docker_auth:
 - username: "{{ docker_user }}"
   password: "{{ docker_pass }}"
