--- a/deploy/configure/inventory/group_vars/monitor.yml
+++ b/deploy/configure/inventory/group_vars/monitor.yml
@@ -16,7 +16,7 @@ docker_container_configs:
         honor_labels: true
         metrics_path: /metrics
         static_configs:
-        - targets: ['consumer.grpcstreambench.domain:80']
+        - targets: ['consumer.app.domain:80']
           labels:
             role: 'consumer'
       - job_name: producer
@@ -25,7 +25,7 @@ docker_container_configs:
         honor_labels: true
         metrics_path: /metrics
         static_configs:
-        - targets: ['producer.grpcstreambench.domain:80']
+        - targets: ['producer.app.domain:80']
           labels:
             role: 'producer'
 
@@ -34,13 +34,48 @@ docker_container_configs:
             target_label: __param_target
           - source_labels: [__param_target]
             target_label: instance
+- name: grafana-dashboard.yaml
+  content: |
+    apiVersion: 1
+    providers:
+    - name: 'default'
+      org_id: 1
+      folder: ''
+      type: 'file'
+      options:
+        path: /var/lib/grafana/dashboards
+- name: grafana-datasource.yaml
+  content: |
+    apiVersion: 1
+    datasources:
+    - name: prometheus
+      type: prometheus
+      access: proxy
+      url: http://monitor.app.domain:9090
+      isDefault: true
+      editable: false
+- name: dashboard1.json
+  content: "{{ lookup('file', './content/dotnet-dashboard.json') }}"
 
 docker_containers:
 - name: prom
   image: "quay.io/prometheus/prometheus"
   tag: "v2.42.0"
   published_ports:
-  - "80:9090"
+  - "9090:9090"
   volumes:
   - "prometheus:/prometheus"
   - "{{ docker_configs_path }}/prometheus.yml:/etc/prometheus/prometheus.yml:ro"
+- name: grafana
+  image: "grafana/grafana"
+  tag: "latest"
+  published_ports:
+  - "80:3000"
+  env:
+    GF_AUTH_ANONYMOUS_ORG_ROLE: "Admin"
+    GF_AUTH_ANONYMOUS_ENABLED: "true"
+    GF_AUTH_BASIC_ENABLED: "false"
+  volumes:
+  - "{{ docker_configs_path }}/dashboard1.json:/var/lib/grafana/dashboards/dashboard1.json"
+  - "{{ docker_configs_path }}/grafana-dashboard.yaml:/etc/grafana/provisioning/dashboards/dashboard.yaml"
+  - "{{ docker_configs_path }}/grafana-datasource.yaml:/etc/grafana/provisioning/datasources/datasource.yaml"
