--- a/deploy/configure/inventory/group_vars/monitor.yml
+++ b/deploy/configure/inventory/group_vars/monitor.yml
@@ -10,15 +10,24 @@ docker_container_configs:
       evaluation_interval: 15s
 
     scrape_configs:
-      - job_name: consumer
+      - job_name: consumer0
         scrape_interval: 10s
         scrape_timeout: 5s
         honor_labels: true
         metrics_path: /metrics
         static_configs:
-        - targets: ['consumer.app.domain:80']
+        - targets: ['consumer0.app.domain:80']
           labels:
-            role: 'consumer'
+            role: 'consumer0'
+        - targets: ['consumer0.app.domain:81']
+          labels:
+            role: 'consumer1'
+        - targets: ['consumer0.app.domain:82']
+          labels:
+            role: 'consumer2'
+        - targets: ['consumer0.app.domain:83']
+          labels:
+            role: 'consumer3'
       - job_name: producer
         scrape_interval: 10s
         scrape_timeout: 5s
