--- a/deploy/configure/inventory/group_vars/monitor.yml
+++ b/deploy/configure/inventory/group_vars/monitor.yml
@@ -4,45 +4,7 @@ docker_volumes:
 
 docker_container_configs:
 - name: prometheus.yml
-  content: |
-    global:
-      scrape_interval: 15s
-      evaluation_interval: 15s
-
-    scrape_configs:
-      - job_name: consumer0
-        scrape_interval: 10s
-        scrape_timeout: 5s
-        honor_labels: true
-        metrics_path: /metrics
-        static_configs:
-        - targets: ['consumer0.app.domain:80']
-          labels:
-            role: 'consumer0'
-        - targets: ['consumer0.app.domain:81']
-          labels:
-            role: 'consumer1'
-        - targets: ['consumer0.app.domain:82']
-          labels:
-            role: 'consumer2'
-        - targets: ['consumer0.app.domain:83']
-          labels:
-            role: 'consumer3'
-      - job_name: producer
-        scrape_interval: 10s
-        scrape_timeout: 5s
-        honor_labels: true
-        metrics_path: /metrics
-        static_configs:
-        - targets: ['producer.app.domain:80']
-          labels:
-            role: 'producer'
-
-        relabel_configs:
-          - source_labels: [__address__]
-            target_label: __param_target
-          - source_labels: [__param_target]
-            target_label: instance
+  content: "{{ lookup('file', './content/prometheus.yml') }}"
 - name: grafana-dashboard.yaml
   content: |
     apiVersion: 1
